<resources>
    <string name="app_name">Desafio Mblab\'s</string>


    <string name="alert_internet_unavailable_title">Nenhuma conexão!</string>
    <string name="alert_internet_unavailable_message">Não foi possível estabelecer conexão com a Internet, verifique sua conexão e tente novamente!</string>
    <string name="alert_internet_unavailable_option_enable">Conexões</string>
    <string name="alert_internet_unavailable_option_exit">Fechar</string>
    <string name="select">Selecione…</string>
    <string name="permission_denied">Infelizmente para acessar essa função precisamos de sua permissão.</string>
    <string name="permission_rationale">Precisamos de sua permissão para acessar essa função.</string>
    <string name="permission_never_ask">O  precisa dessa permissão para funcionar.</string>
    <string name="permission_settings_button_label">Configurações</string>


    <!--Login Screen-->
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login_button_text">Entrar</string>
    <string name="does_not_have_account">Ainda não possui uma conta? <b>Registar-se</b></string>
    <!--    Message Error App-->
    <string name="generic_error_edit_text">O campo %s não pode estar em branco</string>
    <string name="email_error">Email incorreto </string>
    <string name="password_error">Senha incorreta</string>
    <string name="password_error_length">A senha não pode ser menor que 6 caracters</string>
    <string name="unexpected_error">Ops...ocorreu um erro inesperado </string>
    <!--   Register screen-->
    <string name="confirm_password">Confirme sua senha</string>
    <string name="register_name">Nome:</string>
    <string name="confirm_password_register">Confirmar senha:</string>
    <string name="register">Registrar-se</string>
    <string name="already_has_account">Ja possui uma conta? <b>Logar.</b></string>
    <!--Register Event screen-->
    <string name="btn_register_event_home">Cadastre seu evento </string>
    <string name="register_img_message_error">Adicione uma image para continuar</string>
    <string name="register_date">Data</string>
    <string name="register_price_event">Preço</string>
    <string name="register_event_name">Nome do evento</string>
    <string name="register_description_event">Descrição</string>
    <string name="register_event_button">Registar Evento</string>
    <string name="register_add_img_event"><u>Adicionar image</u></string>
    <!--Dialog screen-->
    <string name="price_ingress">Preço: R$  </string>
    <string name="price_ticket"> %1$.2f</string>
    <string name="event_name_ingress">Event name</string>
    <string name="register_description_event_ingress">Encontre ingressos de Eventos para comprar e se divertir . Você pode alterar seu nome de usuário a qualquer momento.</string>
    <string name="ticket_quantities">Quantidade de ingressos:</string>
    <string name="remove_ticket">-</string>
    <string name="add_ticket">+</string>
    <string name="btn_buy_ticket">Comprar ingresso</string>
    <string name="price_event_ticket">%1$.2f</string>
    <string name="logout">Sair</string>
    <string name="profile">Perfil</string>


    <string name="error_generic">Ocorreu um problema, tente novamente.</string>


    <string name="error_gallery_access" />

    <string name="config_image_path_name">picture.jpeg</string>
    <string name="config_edited_image_path_name">picture_edited.jpeg</string>
    <string name="config_decoded_image">image.jpeg</string>

    <string name="ok">OK</string>
    <string name="back">VOLTAR</string>

    <string name="alert_picture_error">Ocorreu um erro ao obter a sua foto, por favor tente novamente!</string>
</resources>