<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_event_ticket"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/event_test_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_event_ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/event_name_ingress"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_event_ticket" />

        <TextView
            android:id="@+id/tv_desc_event_ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:maxLines="3"
            android:text="@string/register_description_event_ingress"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_event_ticket" />

        <TextView
            android:id="@+id/tv_quantities_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ticket_quantities"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc_event_ticket" />

        <TextView
            android:id="@+id/tv_remove_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/remove_ticket"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_quantities_ticket"
            app:layout_constraintStart_toEndOf="@+id/tv_quantities_ticket"
            app:layout_constraintTop_toTopOf="@+id/tv_quantities_ticket" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_remove_ticket"
            app:layout_constraintStart_toEndOf="@+id/tv_remove_ticket"
            app:layout_constraintTop_toTopOf="@+id/tv_remove_ticket" />

        <TextView
            android:id="@+id/tv_add_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ticket"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/holo_green_light"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_price_event_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/price_ingress"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_quantities_ticket" />

        <TextView
            android:id="@+id/tv_price_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_price_event_ticket"
            app:layout_constraintStart_toEndOf="@+id/tv_price_event_ticket"
            app:layout_constraintTop_toTopOf="@+id/tv_price_event_ticket" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_buy_ticket"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="32dp"
            android:backgroundTint="@color/purple"
            android:text="@string/btn_buy_ticket"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_event_ticket" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>