<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="30dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="30dp" />

            <ImageView
                android:id="@+id/btn_back_home"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_register_event"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:src="@drawable/img_default"
                app:layout_constraintBottom_toTopOf="@id/tv_register_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_register_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/register_add_img_event"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/iv_register_event" />

            <EditText
                android:id="@+id/et_register_event_name"
                style="@style/edit_text"
                android:layout_marginTop="22dp"
                android:hint="@string/register_event_name"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_img" />

            <EditText
                android:id="@+id/et_register_event_desc"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/register_description_event"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/et_register_event_name" />

            <EditText
                android:id="@+id/et_register_event_price"
                style="@style/edit_text"
                android:layout_marginTop="22dp"
                android:hint="@string/register_price_event"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/et_register_event_desc" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register_event"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginVertical="26dp"
                android:backgroundTint="@color/purple"
                android:text="@string/register_event_button"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/et_register_event_price"
                app:layout_constraintVertical_bias="0.0" />

            <include
                android:id="@+id/inc_loader"
                layout="@layout/loader_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>